--- a/cal.html
+++ b/cal.html
@@ -14,7 +14,11 @@
         <p>calculator</p>
         <div id="display-container"
         aria-placeholder="00.00">
-            <P id="display " ></P>
+          
+        </div>
+        <div id="display-container2"
+        aria-placeholder="00.00">
+          
         </div>
         <div class="button" data-value="AC"><span>AC</span></div>
         <div class="button " data-value="+/-"><span>+/-</span></div>
